<resources>
    <string name="app_name">Login</string>
    <string name="sky_accounting">Sky accounting</string>
    <string name="title_activity_login">Sign in</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <!-- Strings related to login and registering-->


    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm password</string>

    <string name="text_login">Login</string>
    <string name="fp_login"> Fingerprint</string>

    <string name="text_register">Register</string>

    <string name="text_next">Next</string>

    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No Account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Passwords do not match</string>
    <string name="error_valid_email_password">Wrong Email or password</string>
    <string name="logo">logo</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>


</resources>
