<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.emivue.sqlite_login_and_register_app.activities.LoginActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_height="300dp"
            android:layout_width="300dp"
            android:layout_gravity  ="center_horizontal"
            android:layout_marginTop="-16dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/textInputEditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/textInputEditPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/hint_password"
                android:textColorHint="@color/colorAccent"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <Button
            android:id="@+id/AppCompatButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#f0f0f0"
            android:background="@color/colorAccent"
            android:text="@string/text_login"/>


        <TextView
            android:id="@+id/textViewLinkRegister"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/text_not_member"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CheckBox" />

</LinearLayout>